objects/MPW_Change_Request__c.object
<CustomObject>
    <fields>
        <fullName>Address1_Quantity_Delivery_In_DIE_Form__c</fullName>
        <label>Address1 Quantity Delivery In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1_Quantity_Delivery_In_WAFER_Form__c</fullName>
        <label>Address1 Quantity Delivery In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1_ShortLoop_Wafer__c</fullName>
        <label>Address1 ShortLoop Wafer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Quantity_Delivery_In_DIE_Form__c</fullName>
        <label>Address2 Quantity Delivery In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_Quantity_Delivery_In_WAFER_Form__c</fullName>
        <label>Address2 Quantity Delivery In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2_ShortLoop_Wafer__c</fullName>
        <label>Address2 ShortLoop Wafer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3_Quantity_Delivery_In_DIE_Form__c</fullName>
        <label>Address3 Quantity Delivery In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3_Quantity_Delivery_In_WAFER_Form__c</fullName>
        <label>Address3 Quantity Delivery In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3_ShortLoop_Wafer__c</fullName>
        <label>Address3 ShortLoop Wafer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_On__c</fullName>
        <label>Approved On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <label>Approver Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <label>Approver Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backgrind_Status_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backgrind Status Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backgrind__c</fullName>
        <label>Backgrind</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>MPW_Form__r.Category__c</formula>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CornerSplitAttachedId__c</fullName>
        <label>CornerSplitAttachedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CornerSplitAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CornerSplitAttached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corner_Split_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corner Split Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Corner_Split__c</fullName>
        <label>Corner Split</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Delivery_Qty_Die_Form__c</fullName>
        <label>Delivery Qty Die Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Qty_Wafer_Form__c</fullName>
        <label>Delivery Qty Wafer Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawn_Die_Size_X_um__c</fullName>
        <label>Drawn Die Size X (um)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drawn_Die_Size_Y_um__c</fullName>
        <label>Drawn Die Size Y (um)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_In_DIE_Form__c</fullName>
        <label>Expedite In DIE Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expedite_In_WAFER_Form__c</fullName>
        <label>Expedite In WAFER Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Die_Quantity__c</fullName>
        <label>Extra Die Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extra_Die_Type__c</fullName>
        <label>Extra Die Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extra_Dies_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Extra Dies Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Extra_Wafer_Qty__c</fullName>
        <label>Extra Wafer Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Dies FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Dies FS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry_ID__c</fullName>
        <formula>VALUE(MID(MPW_Prime_Die__r.Geometry__c,1,LEN(MPW_Prime_Die__r.Geometry__c) - 2)) * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Geometry ID</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Internal_Budget_Owner_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Budget Owner 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_Change_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Budget_Owner_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Budget Owner 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_Change_RequestsYLOL</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPW_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>MPW External ID</label>
        <length>150</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MPW_Form_Name__c</fullName>
        <formula>MPW_Form__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Form Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form_Status__c</fullName>
        <formula>TEXT(MPW_Form__r.Form_Status__c)</formula>
        <label>MPW Form Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPW Form</label>
        <referenceTo>MPW_Reservation__c</referenceTo>
        <relationshipLabel>MPW Change Requests</relationshipLabel>
        <relationshipName>MPW_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPW_Prime_Die_Name__c</fullName>
        <formula>MPW_Prime_Die__r.Prime_Die_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Prime Die Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MPW_Prime_Die__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MPW Prime Die</label>
        <referenceTo>MPW_Prime_Die__c</referenceTo>
        <relationshipLabel>MPW Change Requests</relationshipLabel>
        <relationshipName>MPW_Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPW_Train_Name__c</fullName>
        <formula>MPW_Form__r.MPW_Train_Name__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MPW Train Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metal_Stack__c</fullName>
        <label>Metal Stack</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA_Code__c</fullName>
        <formula>MPW_Form__r.PA_Code__c</formula>
        <label>PA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POR__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Dies POR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_Primary_AM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_CSR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary CSR</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_Primary_CSR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejected_By__c</fullName>
        <label>Rejected By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected_On__c</fullName>
        <label>Rejected On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <label>Rejection Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejector_Email__c</fullName>
        <label>Rejector Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejector_Name__c</fullName>
        <label>Rejector Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_On__c</fullName>
        <label>Requested On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Requestor_Email__c</fullName>
        <label>Requestor Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Name__c</fullName>
        <label>Requestor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Dies SF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Dies SS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shortloop_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shortloop Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_New_Wafers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Start New Wafers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Accepted by CE</fullName>
                </value>
                <value>
                    <fullName>Accepted by MPW Tapeout</fullName>
                </value>
                <value>
                    <fullName>Accepted by Turnkey</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending CE Review</fullName>
                </value>
                <value>
                    <fullName>Pending Internal Budget Owner Approval</fullName>
                </value>
                <value>
                    <fullName>Pending MPW Tapeout Review</fullName>
                </value>
                <value>
                    <fullName>Pending Turnkey Review</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Step_1_Approver_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step 1 Approver 10</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_Change_Requests10</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_1_Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step 1 Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_Change_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Step_1_Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Step 1 Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MPW_Change_Requests2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SubDevicesExtractionAttachedId__c</fullName>
        <label>SubDevicesExtractionAttachedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubDevicesExtractionAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SubDevicesExtractionAttached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category__c</fullName>
        <formula>MPW_Form__r.Category__c</formula>
        <label>Sub Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Devices_Extraction__c</fullName>
        <label>Sub Devices Extraction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Devices_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sub Devices Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TurnkeyAttachedId__c</fullName>
        <label>TurnkeyAttachedId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TurnkeyAttached__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TurnkeyAttached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Turnkey_Service__c</fullName>
        <label>Turnkey Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage__c</fullName>
        <formula>MPW_Form__r.Usage__c</formula>
        <label>Usage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Inventory_Wafers__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Use Inventory Wafers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wafer_FF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer FF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_FS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer FS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_POR__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer POR</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_SF__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer SF</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_SS__c</fullName>
        <defaultValue>&apos;0&apos;</defaultValue>
        <label>Wafer SS</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wafer_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wafer Status</label>
        <type>Checkbox</type>
    </fields>
    <label>MPW Change Request</label>
    <listViews>
        <fullName>MPW_28HPP_PLM_Approval_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW 28HPP PLM Approval Queue</label>
        <queue>MPW_28HPP_PLM_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_Customized_MPW_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW Customized MPW Queue</label>
        <queue>MPW_Customized_MPW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_DRS_US_Turnkey_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW DRS,US Turnkey Queue</label>
        <queue>MPW_DRS_US_Turnkey_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_Dresden_MPW_CE_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW Dresden MPW CE Queue</label>
        <queue>MPW_Dresden_MPW_CE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_GlobalShuttle_MPW_Tapeout_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW GlobalShuttle MPW Tapeout Queue</label>
        <queue>MPW_GlobalShuttle_MPW_Tapeout_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_SGP_Turnkey_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW SGP Turnkey Queue</label>
        <queue>MPW_SGP_Turnkey_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_Singapore_MPW_CE_Fab_7_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW Singapore MPW CE Fab 7 Queue</label>
        <queue>MPW_Singapore_MPW_CE_Fab_7_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_Singapore_MPW_CE_Giga_3E_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW Singapore MPW CE Giga+ 3E Queue</label>
        <queue>MPW_Singapore_MPW_CE_Giga_3E_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_TDTI_MPW_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW TDTI MPW Queue</label>
        <queue>MPW_TDTI_MPW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPW_US_MPW_CE_Queue_MPW_Change_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>MPW US MPW CE Queue</label>
        <queue>MPW_US_MPW_CE_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>MPWCR-{0000000}</displayFormat>
        <label>MPW Change Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MPW Change Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>